--- a/brixo-api/pom.xml
+++ b/brixo-api/pom.xml
@@ -91,6 +91,14 @@
         </dependency>
 
         <!-- ═══════════════════════════════════════════
+        ACTUATOR (health checks, metrics)
+        ═══════════════════════════════════════════ -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <!-- ═══════════════════════════════════════════
         EMAIL
         ═══════════════════════════════════════════ -->
         <dependency>
