--- a/brixo-api/src/main/resources/application-prod.yml
+++ b/brixo-api/src/main/resources/application-prod.yml
@@ -20,6 +20,8 @@ spring:
   flyway:
     enabled: true
     baseline-on-migrate: true
+    connect-retries: 3
+    connect-retries-interval: 5
 
   # ── DevTools deshabilitados ──
   devtools:
@@ -30,6 +32,7 @@ spring:
 
 # ── Server tuning ──
 server:
+  port: ${PORT:8080}
   error:
     include-stacktrace: never
     include-message: never
